--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <strong>Crédito Direto ao Consumidor</strong>
             </legend>
 
-            <form action="math.php" method="get">
+            <form action="api/math.php" method="get">
                 <div class="box">
                     <span class="input-group-addon" style="color: antiquewhite"
                         >$</span
